--- a/website/src/pages/docs/basics/client.mdx
+++ b/website/src/pages/docs/basics/client.mdx
@@ -136,7 +136,12 @@ export default withGraphQLClient((ssrCache) => ({
 }))(Page)
 ```
 
+Performing mutations is done in the same way as in the `/app` directory,
+with the same caveats.
+
 ## Best practices
+
+There are some best practices we strongly believe in while developing with `fuse`.
 
 ### Co-locate your fragments
 
