docs: accessing data from the client (#50)
* create some client docs

* install

* finetune

* mutation disclaimer

* top levle queries

--- a/website/src/pages/docs/index.mdx
+++ b/website/src/pages/docs/index.mdx
@@ -120,15 +120,8 @@ If you now open `localhost:3000/api/fuse` in the browser, you'll see GraphiQL an
 
 ## Querying your data layer
 
-Fuse.js offers three entry-points to querying your data, depending on your use case:
-
-- React-Server-Components `fuse/next/server`
-- React-Client-Components in the `/app` directory `fuse/next/client`
-- React-Client Components in the `/pages` directory `fuse/next/pages`
-
-### React-Server-Components
-
-When we are using `react-server-components` we have to register our client before we can start querying.
+This example will focus on `server-components` but you can query your data from anywhere,
+other examples can be found [in the client chapter](./basics/client.mdx).
 
 ```tsx
 import { registerClient, createClient, fetchExchange } from 'fuse/next/server'
@@ -167,132 +160,3 @@ export default async function Page() {
 
 This is the base way to query your components through server-components, you can now
 pass on the data to child components, ...
-
-### React-Client-Components in the `/app` directory
-
-When you are leveraging the `use client;` directive in a `/app` component we have opted out
-of using server-components. This means we are going back to the traditional way of
-distributing our client over `React.context`.
-
-It is advisable to create a `Provider` component with `"use client";` that you use in your
-root-layout component so we are enabled to query data in any client page.
-
-```tsx
-import {
-  Provider,
-  ssrExchange,
-  cacheExchange,
-  fetchExchange,
-  createClient,
-} from 'fuse/next/client'
-import React from 'react'
-
-export const DatalayerProvider = (props: any) => {
-  const [client, ssr] = React.useMemo(() => {
-    const ssr = ssrExchange()
-    const client = createClient({
-      url: 'http://localhost:3000/api/fuse',
-      exchanges: [cacheExchange, ssr, fetchExchange],
-      suspense: true,
-    })
-
-    return [client, ssr]
-  }, [])
-
-  return (
-    <Provider client={client} ssr={ssr}>
-      {props.children}
-    </Provider>
-  )
-}
-```
-
-Let's add this to `app/layout.tsx` so we are enabled to query data in any subsequent page.
-Querying data cna be done by using the `useQuery` hook from `fuse/next/client`.
-
-```tsx
-import { useQuery } from 'fuse/next/client'
-
-function User() {
-  const [result] = useQuery({
-    query: UserQuery,
-    variables: { id: '1' },
-  })
-}
-```
-
-Linearly, we supply `useMutation` for your mutation needs.
-
-> When you mutate data that affects a server-component you will need to call `router.refresh()` to
-> re-render your server-component.
-
-### React-Client-Components in the `/pages` directory
-
-Similar to the `/app` directory we can leverage `useQuery` the difference being that for server-side
-data we will query manually from `getServerSideProps` or `getStaticProps` and pass it into the component.
-
-```tsx
-import {
-  useQuery,
-  withGraphQLClient,
-  initGraphQLClient,
-  ssrExchange,
-  cacheExchange,
-  fetchExchange,
-} from 'fuse/next/pages'
-
-function User() {
-  const [result] = useQuery({
-    query: UserQuery,
-    variables: { id: '1' },
-  })
-}
-
-export async function getServerSideProps() {
-  const ssrCache = ssrExchange({ isClient: false })
-  const client = initGraphQLClient({
-    url: 'http://localhost:3000/api/fuse',
-    exchanges: [cacheExchange, ssrCache, fetchExchange],
-  })
-
-  await client.query(UserQuery, { id: '1' }).toPromise()
-
-  const graphqlState = ssrCache.extractData()
-
-  return {
-    props: {
-      graphqlState,
-    },
-  }
-}
-
-export default withGraphQLClient((ssrCache) => ({
-  url: 'http://localhost:3000/api/fuse',
-  exchanges: [cacheExchange, ssrCache, fetchExchange],
-}))(Page)
-```
-
-## Adding in-line hints and validation (optional)
-
-You can use `@0no-co/graphqlsp` to get inline hints while authoring GraphQL documents, you can do so by installing it
-and using the following in your `tsconfig.json`
-
-```json
-{
-  "name": "@0no-co/graphqlsp",
-  "schema": "./schema.graphql",
-  "disableTypegen": true,
-  "templateIsCallExpression": true,
-  "template": "graphql"
-}
-```
-
-When using `.vscode` you will need to use the workspace version of TypeScript, to do so you can easily do that by creating
-`.vscode/settings.json` with the following content
-
-```json
-{
-  "typescript.tsdk": "node_modules/typescript/lib",
-  "typescript.enablePromptUseWorkspaceTsdk": true
-}
-```
