Add TODO for server actions;

--- a/website/src/pages/docs/basics/client.mdx
+++ b/website/src/pages/docs/basics/client.mdx
@@ -1,6 +1,11 @@
 # Client
 
 In the [Getting started](../index.mdx) section we saw how to query our data from a server-component.
+
+## Server actions
+
+TODO
+
 There are two more ways available to query data, the `/pages` directory and `/app` directory with
 the `"use client"` directive.
 
