Add comparison images

--- a/website/src/pages/docs/data-layers/vs-backend-for-frontends.mdx
+++ b/website/src/pages/docs/data-layers/vs-backend-for-frontends.mdx
@@ -1,5 +1,7 @@
 # Backend-for-Frontends (BFFs) vs. Data layers
 
+![](/images/data-layers-vs-bffs.png)
+
 Just like data layers, BFFs empower frontend & mobile teams to build that translation layer between backend and clients themselves. However, with BFFs each client team builds their own translation layer, which means that you end up with many different translation layers that are all doing the same thing.
 
 This is wasteful and also puts a large burden on the DevOps team to maintain/secure/scale all of these different services.
