--- a/website/src/pages/docs/data-layers/vs-graphql-federation.mdx
+++ b/website/src/pages/docs/data-layers/vs-graphql-federation.mdx
@@ -1,5 +1,7 @@
 # GraphQL Federation vs. Data layers
 
+![](/images/data-layers-vs-graphql-federation.png)
+
 At its core, GraphQL Federation composes a central GraphQL API from many different underlying microservices that all expose GraphQL.
 
 In practice, this falls short because it forces backend engineers to have to learn GraphQL and then build an API that matches user needs — even though that's not how they think about their data and they don't benefit from it.
