other-types -> objects, enums, unions, and interfaces

--- a/website/src/pages/docs/basics/objects-enums-unions-interfaces.mdx
+++ b/website/src/pages/docs/basics/objects-enums-unions-interfaces.mdx
@@ -1,7 +1,6 @@
-# Other types
+# Objects, Enums, Unions, and Interfaces
 
-There are more building blocks available in `fuse` to manage your data-sources and how
-you expose them to your application.
+These four are common building blocks for APIs. Let's take a look at how `fuse` makes them easy to use for you.
 
 ## Objects
 
