--- a/website/src/pages/docs/basics/client.mdx
+++ b/website/src/pages/docs/basics/client.mdx
@@ -1,13 +1,64 @@
 # Client
 
 In the [Getting started](../index.mdx) section we saw how to query our data from a server-component.
+In this section we'll see how to mutate data with a server-action and query data from a client-component.
 
 ## Server actions
 
-TODO
+We can also invoke mutations as part of a [`server-action`](https://nextjs.org/docs/app/building-your-application/data-fetching/forms-and-mutations#how-server-actions-work)
+This requires us to create a new file, for example in this example we'll call a mutation with a name
+argument that returns us `Hello ${args.name}`.
 
-There are two more ways available to query data, the `/pages` directory and `/app` directory with
-the `"use client"` directive.
+We create `actions/hello.ts` and give it the content of
+
+```ts
+'use server'
+
+import { graphql } from '@/fuse'
+import { createClient, fetchExchange, registerClient } from 'fuse/next/server'
+import { redirect } from 'next/navigation'
+
+// Note that this is similar to the query logic
+const { getClient } = registerClient(() =>
+  createClient({
+    url: 'http://localhost:3000/api/fuse',
+    exchanges: [fetchExchange],
+  }),
+)
+
+const SayHello = graphql(`
+  mutation Hello($name: String!) {
+    sayHello(name: $name)
+  }
+`)
+
+export async function sayHello(args: { name: string }) {
+  const client = getClient()
+  const result = await client
+    .mutation(SayHello, { name: args.name })
+    .toPromise()
+
+  console.log(result.data?.sayHello)
+
+  // After completing our mutation we perform a redirect
+  redirect('/')
+}
+```
+
+We can use this on the client by doing
+
+```tsx
+import { sayHello } from './actions/sayHello'
+
+const Component = ({ name }) => {
+  const sayHelloFuse = sayHello.bind(undefined, { name: name || 'fuse' })
+  return (
+    <form action={sayHelloFuse}>
+      <button type='submit'>Say hello and redirect to /</button>
+    </form>
+  )
+}
+```
 
 ## Client `/app` directory
 
