--- a/website/src/pages/docs/api/index.mdx
+++ b/website/src/pages/docs/api/index.mdx
@@ -26,8 +26,9 @@ All of Fuse.js is fully typesafe and has TSDoc annotations, so you should be abl
   - unionType
   - interfaceType
 - Next.js
-  - React client components (`fuse/next/client`)
-  - React server components (`fuse/next/server`)
+  - React client components (`@/fuse/client`)
+  - React server components (`@/fuse/server`)
+  - React pages components (`@/fuse/pages`)
   - API Route (`fuse/next`)
     - createAPIRouteHandler
     - createPagesRouteHandler
