--- a/website/src/pages/docs/index.mdx
+++ b/website/src/pages/docs/index.mdx
@@ -120,6 +120,8 @@ If you now open `localhost:3000/api/fuse` in the browser, you'll see GraphiQL an
 
 ## Querying your data layer
 
+> At this point you will need to run `next dev` so our entry-points can be generated for you.
+
 This example will focus on `server-components` but you can query your data from anywhere,
 other examples can be found [in the client chapter](./basics/client.mdx).
 When using `server-components` we can skip the intermediate step of reaching out to an
