--- a/website/src/pages/docs/basics/client.mdx
+++ b/website/src/pages/docs/basics/client.mdx
@@ -15,7 +15,7 @@ We create `actions/hello.ts` and give it the content of
 'use server'
 
 import { graphql } from '@/fuse'
-import { executeMutation } from '@/fuse/server'
+import { execute } from '@/fuse/server'
 import { redirect } from 'next/navigation'
 
 const SayHello = graphql(`
@@ -26,7 +26,7 @@ const SayHello = graphql(`
 
 export async function sayHello(args: { name: string }) {
   const client = getClient()
-  const result = await executeMutation({ query: SayHello, variables: { name: args.name } });
+  const result = await execute({ query: SayHello, variables: { name: args.name } });
 
   console.log(result.data?.sayHello)
 
