--- a/website/src/pages/docs/index.mdx
+++ b/website/src/pages/docs/index.mdx
@@ -129,7 +129,7 @@ endpoint, hence our codegen has generated an alternative entry-point in `./fuse/
 
 ```tsx
 import { graphql } from '@/fuse'
-import { executeQuery } from '@/fuse/server'
+import { execute } from '@/fuse/server'
 
 const UserQuery = graphql(`
   query User($id: ID!) {
@@ -143,7 +143,7 @@ const UserQuery = graphql(`
 `)
 
 export default async function Page() {
-  const result = await executeQuery({ query: UserQuery, variables: { id: '1' } });
+  const result = await execute({ query: UserQuery, variables: { id: '1' } });
 }
 ```
 
