add update to docs

--- a/website/src/pages/docs/index.mdx
+++ b/website/src/pages/docs/index.mdx
@@ -19,6 +19,10 @@ Before you start using Fuse.js, you need to have:
 
 ## Setting up your Fuse data layer
 
+> If you have an existing Next.JS application you can skip these steps by running
+> `npx create-fuse-app` which will install the dependencies, alter the Next config,
+> create `/api/fuse`, an initial type and update your `tsconfig.json`.
+
 <Steps>
 ### Install the npm packages
 
