--- a/website/src/pages/docs/basics/client.mdx
+++ b/website/src/pages/docs/basics/client.mdx
@@ -15,15 +15,8 @@ We create `actions/hello.ts` and give it the content of
 'use server'
 
 import { graphql } from '@/fuse'
-import { createClient, registerClient } from 'fuse/next/server'
+import { execute } from '@/fuse/server'
 import { redirect } from 'next/navigation'
-
-// Note that this is similar to the query logic
-const { getClient } = registerClient(() =>
-  createClient({
-    url: 'http://localhost:3000/api/fuse',
-  }),
-)
 
 const SayHello = graphql(`
   mutation Hello($name: String!) {
@@ -33,9 +26,7 @@ const SayHello = graphql(`
 
 export async function sayHello(args: { name: string }) {
   const client = getClient()
-  const result = await client
-    .mutation(SayHello, { name: args.name })
-    .toPromise()
+  const result = await execute({ query: SayHello, variables: { name: args.name } });
 
   console.log(result.data?.sayHello)
 
@@ -72,7 +63,7 @@ root-layout component so we are enabled to query data in any client page.
 import {
   Provider,
   createClient,
-} from 'fuse/next/client'
+} from '@/fuse/client'
 import React from 'react'
 
 export const DatalayerProvider = (props: any) => {
@@ -95,10 +86,10 @@ export const DatalayerProvider = (props: any) => {
 ```
 
 Let's add this to `app/layout.tsx` so we are enabled to query data in any subsequent page.
-Querying data cna be done by using the `useQuery` hook from `fuse/next/client`.
+Querying data cna be done by using the `useQuery` hook from your generated fuse folder.
 
 ```tsx
-import { useQuery } from 'fuse/next/client'
+import { useQuery } from '@/fuse/client'
 
 function User() {
   const [result] = useQuery({
@@ -154,7 +145,7 @@ import {
   ssrExchange,
   cacheExchange,
   fetchExchange,
-} from 'fuse/next/pages'
+} from '@/fuse/pages'
 
 function User() {
   const [result] = useQuery({
