--- a/website/src/pages/docs/basics/context.mdx
+++ b/website/src/pages/docs/basics/context.mdx
@@ -12,13 +12,11 @@ By default we will expose `params` and `headers` on the context object. If you w
 adding it to the function invocation of your API handler.
 
 ```ts
-createAPIRouteHandler({
-  context: ({ headers }) => {
-    return {
-      userAgent: headers.get('user-agent')
-    }
+createAPIRouteHandler<{ userAgent: string }>({ context: (ctx) => {
+  return {
+    userAgent: ctx.headers.get('user-agent') || 'unknown',
   }
-})
+}})
 ```
 
 Now the `userAgent` will be available to all of our GraphQL resolvers!
@@ -35,7 +33,7 @@ import { headers } from 'next/headers';
 execute(
   { query: x, variables: {}, context: () => {
     return {
-      userAgent: headers().get('user-agent')
+      userAgent: headers().get('user-agent') || 'unknown'
     }
   } },
 )
