--- a/website/src/pages/docs/basics/context.mdx
+++ b/website/src/pages/docs/basics/context.mdx
@@ -12,11 +12,13 @@ By default we will expose `params` and `headers` on the context object. If you w
 adding it to the function invocation of your API handler.
 
 ```ts
-createAPIRouteHandler<{ userAgent: string }>({ context: (ctx) => {
-  return {
-    userAgent: ctx.headers.get('user-agent') || 'unknown',
+createAPIRouteHandler<{ userAgent: string }>({
+  context: (ctx) => {
+    return {
+      userAgent: ctx.headers.get('user-agent') || 'unknown',
+    }
   }
-}})
+})
 ```
 
 Now the `userAgent` will be available to all of our GraphQL resolvers!
@@ -30,13 +32,15 @@ We'll have to pass these in with the second argument of our `execute` function.
 ```ts
 import { headers } from 'next/headers';
 
-execute(
-  { query: x, variables: {}, context: () => {
+execute({
+  query: x,
+  variables: {},
+  context: () => {
     return {
       userAgent: headers().get('user-agent') || 'unknown'
     }
-  } },
-)
+  } 
+})
 ```
 
 > This means that if you use `context.headers` or a related property in your resolvers that you will need to define this yourself
