--- a/website/src/pages/docs/basics/client.mdx
+++ b/website/src/pages/docs/basics/client.mdx
@@ -60,6 +60,8 @@ It is advisable to create a `Provider` component with `"use client";` that you u
 root-layout component so we are enabled to query data in any client page.
 
 ```tsx
+"use client";
+
 import {
   Provider,
   createClient,
