--- a/website/src/pages/docs/basics/client.mdx
+++ b/website/src/pages/docs/basics/client.mdx
@@ -233,6 +233,14 @@ From now on out, every time we need a new field in the `Avatar` component we can
 and trust that the query is updated automatically and our data is passed into the component by menans of
 `<Avatar user={result.data.user} />`.
 
+### `useFragment` and `FragmentType`
+
+You'll see that we use this `useFragment` function in our components that have a fragment describing their
+data-requirements, this helper ensures that we remove any extraneous fields and type the output correctly.
+Another thing worth noting is how we type the `props`, we use this `FragmentType` helper which ensures that
+the parent-component uses the fragment and passes that into props, this means that if the parent-component
+would define all the fields of the fragment manually and not spread it that we would show a warning.
+
 ### Top-level queries
 
 One of the benefits that comes with describing the data you need is that you perform 1 request and get 1 response,
