--- a/website/src/pages/docs/basics/nodes.mdx
+++ b/website/src/pages/docs/basics/nodes.mdx
@@ -47,7 +47,7 @@ addQueryFields((t) => ({
     type: [UserNode],
     resolve: async () => {
       const result = await listUsers()
-      return result.map(user => user.id);
+      return result.map(user => user.id)
     }
   }),
 }))
@@ -145,7 +145,7 @@ When we have a more complex relationship or don't have the `key` of the related 
 extend the `node`.
 
 ```ts
-import { addNodeFields } from 'fuse';
+import { addNodeFields } from 'fuse'
 
 addNodeFields(UserNode, t => ({
   blogPosts: t.field({
