--- a/website/src/pages/docs/basics/client.mdx
+++ b/website/src/pages/docs/basics/client.mdx
@@ -1,3 +1,5 @@
+import { Callout } from "nextra"
+
 # Client
 
 In the [Getting started](../index.mdx) section we saw how to query our data from a server-component.
@@ -80,7 +82,9 @@ export const DatalayerProvider = (props: any) => {
 
   return (
     <Provider client={client} ssr={ssr}>
-      {props.children}
+      <React.Suspense>
+        {props.children}
+      </React.Suspense>
     </Provider>
   )
 }
@@ -232,6 +236,18 @@ const UserQuery = graphql(`
 From now on out, every time we need a new field in the `Avatar` component we can just add it there
 and trust that the query is updated automatically and our data is passed into the component by menans of
 `<Avatar user={result.data.user} />`.
+
+### `useFragment` and `FragmentType`
+
+You'll see that we use this `useFragment` function in our components that have a fragment describing their
+data-requirements, this helper ensures that we remove any extraneous fields and type the output correctly.
+Another thing worth noting is how we type the `props`, we use this `FragmentType` helper which ensures that
+the parent-component uses the fragment and passes that into props, this means that if the parent-component
+would define all the fields of the fragment manually and not spread it that we would show a warning.
+
+<Callout type="info" emoji="ℹ️">
+  Note that even though this function is called `useFragment`, it is **not a React hook and you need to use it in server components too**.
+</Callout>
 
 ### Top-level queries
 
